[package]
name = "openapi"
version = "1.0.0"
authors = ["Denis Deniz González <denis2.glez@gmail.com>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.69"
url = "2.2.2"
[dependencies.reqwest]
version = "0.11.6"
default-features = false
features = ["json", "multipart"]

[dev-dependencies]
